fixed alignment styling

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-body {
-    display: block;
-    box-sizing: border-box;
-}
 
 .application {
     max-width: 600px;
@@ -10,12 +6,21 @@ body {
     border: 1px solid #dadde1;
     border-radius: 5px;
 }
+
+.Weather {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 30px 50px rgba(65,50,100,.08);
+    color: #878787;
+    font-family: Cerebri-Sans,Helvetica,Arial,sans-serif;
+    padding: 40px;
+}
+
+.WeatherInfo {
+    margin-top: 20px;
+}
+
 .row {
-    color: #212121;
-    font-size: 80px;
-    font-weight: 400;
-    font-weight: 700;
-    line-height: 1;
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
     display: flex;
@@ -24,7 +29,35 @@ body {
     margin-right: calc(var(--bs-gutter-x)*-.5);
     margin-top: calc(var(--bs-gutter-y)*-1);
 }
-    h1 {
+
+.logo {
+   max-width: 100px;
+}
+weatherInfo.temperature-container {
+    align-items: center;
+    margin-top: 30px;
+}
+
+.col-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+
+.Weather .temperature {
+    color: #212121;
+    font-size: 80px;
+    font-weight: 400;
+    font-weight: 700;
+    line-height: 1;
+    margin-left: 10px;
+}
+
+body {
+    display: block;
+    box-sizing: border-box;
+}
+
+h1 {
     color: black;
     display: block;
     font-size: 38px;
